# ingabe

./: .dockerignore  .env.example  .env.prod.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.base  Dockerfile.postgres  PHASE3_IMPLEMENTATION_SUMMARY.md  README.md  SLIPLANE_DEMO.md  TODOS.md  conftest.py  dagster.yaml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run_cell_ndvi.py  run_weather_ingest.py  superset_config.py  workspace.yaml
.basedpyright/: baseline.json
alembic/: env.py
docs/: FAST_UPLOAD.md  Ingabe_Presentation.pptx  Ingabe_Training_Manual.docx  TRAINING_MANUAL.md  astro.config.mjs  partner-onboarding-runbook.md
frontendts/: .env.production.example  .gitignore  index.html  mundi-diag.mjs  mundi-interact.mjs  package-lock.json  package.json  playwright.config.ts  test-controls.mjs  tsconfig.json  vite.config.ts  vitest.config.ts
hermes_integration/: PHASE_2_INPROCESS_DESIGN.md  STREAM_1_OPENAI_UPGRADE_AUDIT.md
loadtest/: README.md  locustfile.py
marketing/: cowork-project-brief.md  product-scripts.md
milvus/: user.yaml
monitoring/: prometheus.yml  tempo.yml
nginx/: Dockerfile  main.conf  nginx.conf
noza-web/: .dockerignore  .env.example  .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
qgis-processing/: Dockerfile  LICENSE  server.py
scripts/: Dockerfile.backup  backfill_brain_link_types.py  backup.sh  deploy.sh  entrypoint.sh  generate_pdf_presentation.py  generate_presentation.py  generate_training_doc.py  install-hermes-plugin.sh  migrate-db.sh  migrate-s3.sh  prod  setup-vps.sh  setup_sentinel_hub.py  sliplane_demo_deploy.py  start-services.sh
services/: api_insurance.py  api_monitor.py  insurance_report.py  monitor_field_v3.py
src/: _test_streaming_mock.py  circuit_breaker.py  config.py  dag.py  duckdb.py  exceptions.py  fs_lru.py  logging_json.py  openapi.py  openstreetmap.py  postgis_tiles.py  structures.py  test_basemap.py  test_bounds.py  test_bounds_api.py  test_cloud_services.py  test_context_length_error.py  test_conversation_api.py  test_conversation_integration.py  test_dag.py  test_duckdb_query_from_kue.py  test_duckdb_utils.py  test_empty_upload.py  test_exceptions.py  test_gdal.py  test_gdal_api.py  test_kml_samples.py  test_lakehouse.py  test_laz_upload.py  test_map_api.py  test_mbgl_renderer.py  test_message_loop.py  test_messages.py  test_ml_inference.py  test_openstreetmap.py  test_pipelines.py  (+29 more)
(+316 files in other folders)
