[project]
name = "mundi.ai"
version = "0.0.1"
description = "Mundi.ai is an open source web GIS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioboto3==14.3.0",
    "aiohttp==3.11.18",
    "alembic==1.16.2",
    "asyncpg==0.30.0",
    "boto3==1.37.3",
    "dask==2024.12.1",
    "fastapi==0.115.12",
    "fiona==1.10.1",
    # Hermes Agent — Nous Research's MIT-licensed Python AI agent framework.
    # Phase 2 of the Sage migration: replace _handle_chat_completion's hand-rolled
    # turn loop with Hermes's runtime, plug ingabe-sage plugin from hermes_integration/.
    # Pinned to v2026.5.7 (date-versioned tag) because earlier 0.13.0 used exact pins
    # that conflicted with our openai==2.36.0; v2026.5.7 uses `openai>=2.21.0,<3` ranges.
    # NOT yet imported in src/ — adding here so the dep is resolvable before Stream 2
    # wires the runtime.
    "hermes-agent @ git+https://github.com/NousResearch/hermes-agent@v2026.5.7",
    "httpx==0.28.1",
    "httpx-ws==0.7.2",
    "laspy==2.6.1",
    "numpy==2.3.1",
    "openai==2.36.0",
    "opentelemetry-api==1.36.0",
    "opentelemetry-exporter-otlp-proto-http==1.36.0",
    "opentelemetry-sdk==1.36.0",
    "pillow==9.4.0",
    # Bumped 2.11.4 → 2.13.4 to satisfy hermes-agent's >=2.12.5 floor.
    # Pydantic 2.11 → 2.13 stays in the 2.x line; the v2 stability contract
    # means no breaking API changes for model definitions.
    "pydantic==2.13.4",
    "pyproj==3.4.1",
    "pytest==8.3.5",
    "redis==6.1.0",
    "slowapi==0.1.9",
    "rioxarray==0.17.0",
    "sqlalchemy==2.0.41",
    "xarray==2024.11.0",
]

[tool.basedpyright]
include = ["src"]

exclude = ["**/__pycache__", "**/.venv", "**/.mypy_cache", "**/.ruff_cache", "**/build", "**/dist"]

pythonVersion = "3.11"

baselineFile = ".basedpyright/baseline.json"

# can tighten later to "recommended"
typeCheckingMode = "standard"

# Many deps (osgeo/GDAL, dask, fiona) require C libs not available in CI
reportMissingImports = false

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# E402: module-level import not at top (many files use conditional / late imports)
# F401: imported but unused (re-exports, lazy imports)
# F841: local variable assigned but never used (WIP code)
# E741: ambiguous variable name (single-letter vars in math/geo code)
ignore = ["E402", "F401", "F841", "E741", "E702"]

[dependency-groups]
dev = [
    "basedpyright",
]
